--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "mini-css-extract-plugin": "^0.11.2",
         "node-sass": "^4.14.1",
         "resource-hints-webpack-plugin": "^0.0.2",
+        "sass-loader": "^10.0.2",
         "style-loader": "^1.2.1",
         "styled-jsx-plugin-sass": "^1.0.0",
         "url-loader": "^4.1.0",
@@ -32,6 +33,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
+        "react-social-login-buttons": "^3.1.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^1.2.1",
         "styled-components": "^5.2.0",
