--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
+        "axios": "^0.20.0",
+        "nanoid": "^3.1.12",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
