--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
+        "react-keep-alive": "^2.5.2",
         "react-social-login-buttons": "^3.1.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^1.2.1",
