update: add inprivate mode & fix api callee.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,7 @@
         "storage",
         "tabs"
     ],
+    "incognito":"split",
     "browser_action": {
         "default_icon": "./ext-icon.png"
     }
