--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "scripts": {
         "build": "NODE_ENV=production webpack --config ./build/webpack.config.js",
-        "build:dev": "NODE_ENV=development webpack --config ./build/webpack.config.js"
+        "build:dev": "NODE_ENV=development webpack --config ./build/webpack.config.js --profile --json > compilation-stats.json"
     },
     "devDependencies": {
         "@babel/core": "^7.12.3",
@@ -26,7 +26,7 @@
         "style-loader": "^2.0.0",
         "styled-jsx-plugin-sass": "^1.0.0",
         "url-loader": "^4.1.1",
-        "webpack": "^5.3.0",
+        "webpack": "^5.3.1",
         "webpack-cli": "^4.1.0"
     },
     "dependencies": {
