--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "webpack-cli": "^4.1.0"
     },
     "dependencies": {
+        "@sentry/react": "^5.27.1",
         "axios": "^0.21.0",
         "nanoid": "^3.1.16",
         "react": "^17.0.1",
