--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "dependencies": {
         "@sentry/react": "^5.27.1",
         "axios": "^0.21.0",
+        "codemirror": "^5.58.2",
         "nanoid": "^3.1.16",
         "react": "^17.0.1",
+        "react-codemirror2": "^7.2.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
         "react-keep-alive": "^2.5.2",
